--- a/languages/wp-job-manager-da_DK.po
+++ b/languages/wp-job-manager-da_DK.po
@@ -2,13 +2,14 @@
 # This file is distributed under the same license as the WP Job Manager package.
 # Translators:
 # Martin Hansen, 2014-2015
+# Nicolai <transifex.com@netcure.dk>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2015-04-16 21:48:26+00:00\n"
-"PO-Revision-Date: 2015-04-16 21:48+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
+"POT-Creation-Date: 2015-04-22 13:05:30+00:00\n"
+"PO-Revision-Date: 2015-06-12 15:18+0000\n"
+"Last-Translator: Martin Hansen\n"
 "Language-Team: Danish (Denmark) (http://www.transifex.com/projects/p/wp-job-manager/language/da_DK/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -23,11 +24,11 @@ msgstr "WP Job Manager Add-ons"
 
 #: includes/admin/class-wp-job-manager-addons.php:59
 msgid "Do you need multiple add-ons?"
-msgstr ""
+msgstr "Har du brug for flere add-ons?"
 
 #: includes/admin/class-wp-job-manager-addons.php:59
 msgid "Check out the core add-on bundle &rarr;"
-msgstr ""
+msgstr "Tjek core add-on bundle &rarr;"
 
 #: includes/admin/class-wp-job-manager-admin.php:58
 msgid "Settings"
@@ -214,21 +215,21 @@ msgstr "Skjult besatte stillinger"
 
 #: includes/admin/class-wp-job-manager-settings.php:57
 msgid "If enabled, filled positions will be hidden from archives."
-msgstr ""
+msgstr "Hvis aktiveret besatte jobs vil blvie skjult i arkivet."
 
 #: includes/admin/class-wp-job-manager-settings.php:64
 msgid "Expired Listings"
-msgstr ""
+msgstr "Udløbne annoncer"
 
 #: includes/admin/class-wp-job-manager-settings.php:65
 msgid "Hide content within expired listings"
-msgstr ""
+msgstr "Skjul indhold fra udløbne annoncer"
 
 #: includes/admin/class-wp-job-manager-settings.php:66
 msgid ""
 "If enabled, the content within expired listings will be hidden. Otherwise, "
 "expired listings will be displayed as normal (without the application area)."
-msgstr ""
+msgstr "Hvis aktiv, vil indholdet af udløbet lister blive skjult. Ellers, vil udløbbet lister blive vist som normalt (Uden ansøgningsområdet)"
 
 #: includes/admin/class-wp-job-manager-settings.php:74
 msgid "Enable categories for listings"
@@ -301,7 +302,7 @@ msgstr "Hvis aktiv, vil gæster kunne oprette en konto ved at skrive deres e-mai
 
 #: includes/admin/class-wp-job-manager-settings.php:125
 msgid "Account Username"
-msgstr ""
+msgstr "Konto brugernavn"
 
 #: includes/admin/class-wp-job-manager-settings.php:126
 msgid "Automatically Generate Username from Email Address"
@@ -325,11 +326,11 @@ msgstr "Hvis du aktivere registering på din liste, skal du vælge en rolle til 
 
 #: includes/admin/class-wp-job-manager-settings.php:142
 msgid "Moderate New Listings"
-msgstr ""
+msgstr "Administere nye lister"
 
 #: includes/admin/class-wp-job-manager-settings.php:143
 msgid "New listing submissions require admin approval"
-msgstr ""
+msgstr "Ny liste indsendelse kræver administrator godkendelse"
 
 #: includes/admin/class-wp-job-manager-settings.php:144
 msgid "If enabled, new submissions will be inactive, pending admin approval."
@@ -633,11 +634,11 @@ msgstr "fx \"København\""
 
 #: includes/admin/class-wp-job-manager-writepanels.php:33
 msgid "Leave this blank if the location is not important."
-msgstr ""
+msgstr "Efterlad tom hvis denne ikke er vigtig"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:37
 msgid "Application Email or URL"
-msgstr ""
+msgstr "Ansøgning e-mail/link"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:38
 msgid "URL or email which applicants use to apply"
@@ -651,15 +652,15 @@ msgstr "Dette felt er påkrævet for \"ansøgningens\" område. "
 
 #: includes/admin/class-wp-job-manager-writepanels.php:44
 msgid "Company Name"
-msgstr ""
+msgstr "Firma navn"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:49
 msgid "Company Website"
-msgstr ""
+msgstr "Firma website"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:54
 msgid "Company Tagline"
-msgstr ""
+msgstr "Firma slogan"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:55
 msgid "Brief description about the company"
@@ -671,7 +672,7 @@ msgstr "Firma Twitter"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:64
 msgid "Company Logo"
-msgstr ""
+msgstr "Firma logo"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:65
 msgid "URL to the company logo"
@@ -679,7 +680,7 @@ msgstr "Link til firma logoet"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:70
 msgid "Company Video"
-msgstr ""
+msgstr "Firma video"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:71
 msgid "URL to the company video"
@@ -687,15 +688,15 @@ msgstr "Link til firma logoet"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:76
 msgid "Position Filled"
-msgstr ""
+msgstr "Stillingen er besat"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:79
 msgid "Filled listings will no longer accept applications."
-msgstr ""
+msgstr "Besatte liste vil ikke kunne modtage flere ansøgere"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:84
 msgid "Featured Listing"
-msgstr ""
+msgstr "Favoritte liste"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:86
 msgid ""
@@ -705,7 +706,7 @@ msgstr "Favoritrede stillinger vil blive låst under søgninger og kan styles an
 
 #: includes/admin/class-wp-job-manager-writepanels.php:90
 msgid "Listing Expiry Date"
-msgstr ""
+msgstr "Listens udløbsdato"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:91
 msgid "yyyy-mm-dd"
@@ -737,15 +738,15 @@ msgstr "Tilføj en fil"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:333
 msgid "Guest User"
-msgstr ""
+msgstr "Gæste bruger"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:335
 msgid "Change"
-msgstr ""
+msgstr "Ændringer"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:339
 msgid "Enter the ID of the user, or leave blank if submitted by a guest."
-msgstr ""
+msgstr "Indtast bruger ID eller efterlad tom for gæste bruger"
 
 #: includes/class-wp-job-manager-ajax.php:124
 msgid "located in &ldquo;%s&rdquo;"
@@ -970,12 +971,12 @@ msgstr "Antal af lister der skal vises"
 
 #: includes/class-wp-job-manager-widgets.php:253
 msgid "Display a list of featured listings on your site."
-msgstr ""
+msgstr "Vis en liste over favoriteret stillinger på din side"
 
 #: includes/class-wp-job-manager-widgets.php:255
 #: includes/class-wp-job-manager-widgets.php:259
 msgid "Featured %s"
-msgstr ""
+msgstr "Favoritter %s "
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:51
 msgid "Invalid listing"
@@ -999,7 +1000,7 @@ msgstr "Indsend detaljer"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:39
 #: includes/forms/class-wp-job-manager-form-submit-job.php:376
-#: includes/forms/class-wp-job-manager-form-submit-job.php:622
+#: includes/forms/class-wp-job-manager-form-submit-job.php:623
 msgid "Preview"
 msgstr "Vis"
 
@@ -1091,7 +1092,7 @@ msgid "%s is invalid"
 msgstr "%s er ukendt"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:261
-#: wp-job-manager-functions.php:654
+#: wp-job-manager-functions.php:662
 msgid "\"%s\" (filetype %s) needs to be one of the following file types: %s"
 msgstr "\"%s\" (filetype %s) Skal være en af følgende: %s"
 
@@ -1119,13 +1120,13 @@ msgstr "Venligst indtast din e-mail adresse "
 msgid "You must be signed in to post a new listing."
 msgstr "Du skal være logged ind for at indsende en ny liste"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:616
-msgid "Submit Listing"
-msgstr ""
-
 #: includes/forms/class-wp-job-manager-form-submit-job.php:617
+msgid "Submit Listing"
+msgstr "Indsend stilling"
+
+#: includes/forms/class-wp-job-manager-form-submit-job.php:618
 msgid "Edit listing"
-msgstr ""
+msgstr "Ret stilling"
 
 #: templates/account-signin.php:4
 msgid "Your account"
@@ -1198,11 +1199,11 @@ msgstr "Denne stilling er blevet besat"
 
 #: templates/content-single-job_listing-meta.php:25
 msgid "Applications have closed"
-msgstr ""
+msgstr "Ansøgninger er blevet lukkede"
 
 #: templates/content-single-job_listing.php:5
 msgid "This listing has expired."
-msgstr ""
+msgstr "Denne liste er udløbet"
 
 #: templates/form-fields/file-field.php:29
 msgid "Maximum file size: %s."
@@ -1339,29 +1340,29 @@ msgstr "Din e-mail er oprettede. Venligst vælg en anden"
 msgid "Choose a category&hellip;"
 msgstr "Vælg en kategori&hellip;"
 
-#: wp-job-manager-functions.php:656
+#: wp-job-manager-functions.php:664
 msgid "Uploaded files need to be one of the following file types: %s"
-msgstr ""
+msgstr "Uploaded filer skal være en af følgende filtyper : %s"
 
 #: wp-job-manager-template.php:135
 msgid "Inactive"
 msgstr "Inaktiv"
 
-#: wp-job-manager-template.php:220
+#: wp-job-manager-template.php:222
 msgid "Application via \"%s\" listing on %s"
 msgstr "Ansøgningen via \"%s\" vises på %s"
 
-#: wp-job-manager-template.php:281
+#: wp-job-manager-template.php:283
 msgid "Anywhere"
 msgstr "Overalt"
 
 #: wp-job-manager.php:142
 msgid "Invalid file type. Accepted types:"
-msgstr ""
+msgstr "Forkert filtype, de godkendte er:"
 
 #: wp-job-manager.php:154
 msgid "Load previous listings"
-msgstr ""
+msgstr "Indlæser tidligere liste"
 
 #: wp-job-manager.php:157
 msgid "Are you sure you want to delete this listing?"
