--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -3,8 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager 1.23.0\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2015-06-13 12:39:58+00:00\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/WP-Job-Manager\n"
+"POT-Creation-Date: 2015-06-17 21:17:41+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
