--- a/languages/wp-job-manager-nl_NL.po
+++ b/languages/wp-job-manager-nl_NL.po
@@ -8,11 +8,11 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: WP Job Manager\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/support/plugin/WP-Job-Manager\n"
-"POT-Creation-Date: 2015-06-17 21:17:41+00:00\n"
-"PO-Revision-Date: 2015-06-14 08:37+0000\n"
-"Last-Translator: Mike Jolley <mike.jolley@me.com>\n"
-"Language-Team: Dutch (Netherlands) (http://www.transifex.com/projects/p/wp-job-manager/language/nl_NL/)\n"
+"Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
+"POT-Creation-Date: 2015-07-25 16:24:46+00:00\n"
+"PO-Revision-Date: 2015-08-03 09:25+0000\n"
+"Last-Translator: Evert Semeijn <transifex@fourleafed.com>\n"
+"Language-Team: Dutch (Netherlands) (http://www.transifex.com/mikejolley/wp-job-manager/language/nl_NL/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -470,7 +470,7 @@ msgid ""
 "If you want to skip the wizard and setup the pages and shortcodes yourself "
 "manually, the process is still relatively simple. Refer to the "
 "%sdocumentation%s for help."
-msgstr ""
+msgstr "Als u de installatie wizard wilt overslaan en de pagina's en shortcodes handmatig aan wilt maken, dan is dat vrij eenvoudig. Voor hulp kunt u de %sdocumentatie%s raadplegen."
 
 #: includes/admin/class-wp-job-manager-setup.php:145
 msgid "Continue to page setup"
@@ -708,7 +708,7 @@ msgstr "Uitgelichte vacatures springen in het oog en worden bij zoekopdrachten b
 
 #: includes/admin/class-wp-job-manager-writepanels.php:90
 msgid "Listing Expiry Date"
-msgstr ""
+msgstr "Verloop datum"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:91
 msgid "yyyy-mm-dd"
@@ -740,21 +740,21 @@ msgstr "Bestand toevoegen"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:333
 msgid "Guest User"
-msgstr ""
+msgstr "Gastgebruiker"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:335
 msgid "Change"
-msgstr ""
+msgstr "Wijzig"
 
 #: includes/admin/class-wp-job-manager-writepanels.php:339
 msgid "Enter the ID of the user, or leave blank if submitted by a guest."
-msgstr ""
+msgstr "Voer de ID van de gebruiker in, of laat leeg om als gast te plaatsen."
 
-#: includes/class-wp-job-manager-ajax.php:183
+#: includes/class-wp-job-manager-ajax.php:181
 msgid "located in &ldquo;%s&rdquo;"
 msgstr "met standplaats in &ldquo;%s&rdquo;"
 
-#: includes/class-wp-job-manager-ajax.php:190
+#: includes/class-wp-job-manager-ajax.php:188
 msgid "Showing all %s"
 msgstr "Er zijn momenteel geen filter actief voor %s"
 
@@ -972,12 +972,12 @@ msgstr "Aantal vacatures om te tonen"
 
 #: includes/class-wp-job-manager-widgets.php:253
 msgid "Display a list of featured listings on your site."
-msgstr ""
+msgstr "Toon een overzicht van de uitgelichte vacatures op uw website."
 
 #: includes/class-wp-job-manager-widgets.php:255
 #: includes/class-wp-job-manager-widgets.php:259
 msgid "Featured %s"
-msgstr ""
+msgstr "Uitgelicht %s"
 
 #: includes/forms/class-wp-job-manager-form-edit-job.php:51
 msgid "Invalid listing"
@@ -1001,8 +1001,8 @@ msgid "Submit Details"
 msgstr "Details verzenden"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:39
-#: includes/forms/class-wp-job-manager-form-submit-job.php:377
-#: includes/forms/class-wp-job-manager-form-submit-job.php:624
+#: includes/forms/class-wp-job-manager-form-submit-job.php:378
+#: includes/forms/class-wp-job-manager-form-submit-job.php:625
 msgid "Preview"
 msgstr "Voorvertoning"
 
@@ -1038,7 +1038,7 @@ msgstr "Voer een e-mail adres of website in"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:122
 msgid "Job Title"
-msgstr ""
+msgstr "Vacature titel"
 
 #: includes/forms/class-wp-job-manager-form-submit-job.php:130
 msgid "Leave this blank if the location is not important"
@@ -1097,42 +1097,42 @@ msgstr "%s is een verplicht veld"
 msgid "%s is invalid"
 msgstr "%s is ongeldig"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:262
-#: wp-job-manager-functions.php:658
+#: includes/forms/class-wp-job-manager-form-submit-job.php:263
+#: wp-job-manager-functions.php:660
 msgid "\"%s\" (filetype %s) needs to be one of the following file types: %s"
 msgstr "\"%s\" (bestandstype %s) moet een van de volgende bestandstypes zijn: %s"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:277
+#: includes/forms/class-wp-job-manager-form-submit-job.php:278
 msgid "Please enter a valid application email address"
 msgstr "Voer een geldig sollicitatie e-mail adres in"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:286
+#: includes/forms/class-wp-job-manager-form-submit-job.php:287
 msgid "Please enter a valid application URL"
 msgstr "Voer een geldig sollicitatie URL in"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:296
+#: includes/forms/class-wp-job-manager-form-submit-job.php:297
 msgid "Please enter a valid application email address or URL"
 msgstr "Voer een geldig sollicitatie e-mail of URL in"
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:408
+#: includes/forms/class-wp-job-manager-form-submit-job.php:409
 msgid "Please enter a username."
-msgstr ""
+msgstr "Voer een gebruikersnaam in."
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:411
+#: includes/forms/class-wp-job-manager-form-submit-job.php:412
 msgid "Please enter your email address."
-msgstr ""
+msgstr "Voer uw e-mail adres in."
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:429
+#: includes/forms/class-wp-job-manager-form-submit-job.php:430
 msgid "You must be signed in to post a new listing."
 msgstr "U moet ingelogd zijn om vacatures te kunnen plaatsen."
 
-#: includes/forms/class-wp-job-manager-form-submit-job.php:618
-msgid "Submit Listing"
-msgstr ""
-
 #: includes/forms/class-wp-job-manager-form-submit-job.php:619
+msgid "Submit Listing"
+msgstr "Verzend vacature"
+
+#: includes/forms/class-wp-job-manager-form-submit-job.php:620
 msgid "Edit listing"
-msgstr ""
+msgstr "Bewerk vacature"
 
 #: templates/account-signin.php:4
 msgid "Your account"
@@ -1159,7 +1159,7 @@ msgid ""
 "If you don&rsquo;t have an account you can %screate one below by entering "
 "your email address/username. A password will be automatically emailed to "
 "you."
-msgstr ""
+msgstr "Als u nog geen account heeft dan wordt deze automatisch aangemaakt als u hieronder uw e-mail adres invult. Uw wachtwoord wordt vervolgens naar dat adres verzonden."
 
 #: templates/account-signin.php:28
 msgid "optionally"
@@ -1188,11 +1188,11 @@ msgstr "%s geleden"
 
 #: templates/content-no-jobs-found.php:2
 msgid "There are no listings matching your search."
-msgstr ""
+msgstr "Geen vacatures gevonden die aan uw zoekopdracht voldoen."
 
 #: templates/content-no-jobs-found.php:4
 msgid "There are currently no vacancies."
-msgstr ""
+msgstr "Er zijn momenteel geen vacatures."
 
 #: templates/content-single-job_listing-meta.php:20
 #: templates/content-summary-job_listing.php:14
@@ -1205,15 +1205,25 @@ msgstr "Deze positie is vervuld"
 
 #: templates/content-single-job_listing-meta.php:25
 msgid "Applications have closed"
-msgstr ""
+msgstr "Solliciteren is gesloten"
 
 #: templates/content-single-job_listing.php:6
 msgid "This listing has expired."
-msgstr ""
+msgstr "Deze vacature is verlopen"
 
 #: templates/form-fields/file-field.php:29
 msgid "Maximum file size: %s."
 msgstr "Max. bestandsgrootte: %s."
+
+#: templates/form-fields/multiselect-field.php:3
+#: wp-job-manager-functions.php:507
+msgid "No results match"
+msgstr "Geen vacatures gevonden"
+
+#: templates/form-fields/multiselect-field.php:3
+#: wp-job-manager-functions.php:508
+msgid "Select Some Options"
+msgstr "Selecteer uw opties"
 
 #: templates/form-fields/uploaded-file-html.php:6
 #: templates/form-fields/uploaded-file-html.php:8
@@ -1232,7 +1242,7 @@ msgstr "Solliciteer via webmail:"
 
 #: templates/job-application-url.php:1
 msgid "To apply for this job please visit the following URL:"
-msgstr ""
+msgstr "Om te solliciteren gaat u naar de volgende link:"
 
 #: templates/job-application.php:7
 msgid "Apply for job"
@@ -1344,9 +1354,9 @@ msgstr "Dit e-mail adres is reeds geregisterd. Kiest u alstublieft een ander e-m
 msgid "Choose a category&hellip;"
 msgstr "Kies een categorie&hellip;"
 
-#: wp-job-manager-functions.php:660
+#: wp-job-manager-functions.php:662
 msgid "Uploaded files need to be one of the following file types: %s"
-msgstr ""
+msgstr "De bestanden moet een van de volgende bestandstypes zijn: %s"
 
 #: wp-job-manager-template.php:135
 msgid "Inactive"
@@ -1360,15 +1370,15 @@ msgstr "Sollicitatie via \"%s\" plaatsing op %s"
 msgid "Anywhere"
 msgstr "Overal"
 
-#: wp-job-manager.php:143
+#: wp-job-manager.php:147
 msgid "Invalid file type. Accepted types:"
-msgstr ""
+msgstr "Ongeldig bestandtype: Geaccepteerde bestandstypes:"
 
-#: wp-job-manager.php:155
+#: wp-job-manager.php:160
 msgid "Load previous listings"
-msgstr ""
+msgstr "Toon oudere vacatures"
 
-#: wp-job-manager.php:158
+#: wp-job-manager.php:163
 msgid "Are you sure you want to delete this listing?"
 msgstr "Weet u zeker dat u deze vacature wilt verwijderen?"
 
