--- a/languages/wp-job-manager.pot
+++ b/languages/wp-job-manager.pot
@@ -2,9 +2,9 @@
 # This file is distributed under the same license as the WP Job Manager package.
 msgid ""
 msgstr ""
-"Project-Id-Version: WP Job Manager 1.23.7\n"
+"Project-Id-Version: WP Job Manager 1.23.8\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/WP-Job-Manager\n"
-"POT-Creation-Date: 2015-08-19 14:31:57+00:00\n"
+"POT-Creation-Date: 2015-08-20 22:10:01+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1150,7 +1150,8 @@ msgstr ""
 #: templates/account-signin.php:28
 msgid ""
 "If you don&rsquo;t have an account you can %screate one below by entering "
-"your email address/username. A password will be automatically emailed to you."
+"your email address/username. Your account details will be confirmed via "
+"email."
 msgstr ""
 
 #: templates/account-signin.php:28
